--- a/style.css
+++ b/style.css
@@ -39,3 +39,12 @@
     padding: 10px;
     border-radius: 20px;
 }
+
+#reproducir{
+    background-color: darkred;
+    width: auto;
+    margin-top: 30px;
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 20px;
+}
